# Matura

./: AprilTags.xcf  CMakeLists.txt  Images.conf  Joystick.h  PhongDrawable.h  README.md  RadialCamera.cpp  RadialCamera.h  SerialCom.cpp  SerialCom.h  Shaders.conf  Tag.blend  Tag.blend1  TextureShader.h  blub.cpp  imgui.ini  imgui_demo.cpp  main.cpp
MotorController/: MotorController.ino
MotorController/sketch_nov10a/: sketch_nov10a.ino
include/: CLIntrinsics.h  CameraLocator.h  DebugLines.h  DebugUI.h  FlatDrawable.h  Frame.h  GlobalIncludes.h  ImageFrame.h  Joystick.h  Objects.h  ParabolaPredictor.h  PhongDrawable.h  PhongGLShadows.h  PostProcess.h  RadialCamera.h  SceneFrame.h  ShadowCasterDrawable.h  ShadowCasterShader.h  ShadowLight.h  Stage.h  StageFrame.h  VideoFrame.h  Viewer.h
res/: ImGuiSetup.txt  PhongShadow.frag  PhongShadow.vert  PostProcess.frag  PostProcess.vert  ShadowCaster.frag  Upperbase V1.stl  cameras.txt  frag.glsl  vert.glsl
src/: CLIntrinsics.cpp  CameraLocator.cpp  DebugUI.cpp  FlatDrawable.cpp  Frame.cpp  ImageFrame.cpp  Joystick.cpp  Objects.cpp  ParabolaPredictor.cpp  PhongDrawable.cpp  PhongGLShadows.cpp  PostProcess.cpp  RadialCamera.cpp  SceneFrame.cpp  ShadowCasterDrawable.cpp  ShadowCasterShader.cpp  ShadowLight.cpp  Stage.cpp  StageFrame.cpp  VideoFrame.cpp  main.cpp
